src/App.css
:root {
	/* https://tailwindcss.com/docs/customizing-colors/#default-color-palette */
	--black:        #000000;
	--blue-100:     #ebf8ff;
	--blue-200:     #bee3f8;
	--blue-300:     #90cdf4;
	--blue-400:     #63b3ed;
	--blue-500:     #4299e1;
	--blue-600:     #3182ce;
	--blue-700:     #2b6cb0;
	--blue-800:     #2c5282;
	--blue-900:     #2a4365;
	--gray-100:     #f7fafc;
	--gray-200:     #edf2f7;
	--gray-300:     #e2e8f0;
	--gray-400:     #cbd5e0;
	--gray-500:     #a0aec0;
	--gray-600:     #718096;
	--gray-700:     #4a5568;
	--gray-800:     #2d3748;
	--gray-900:     #1a202c;
	--green-100:    #f0fff4;
	--green-200:    #c6f6d5;
	--green-300:    #9ae6b4;
	--green-400:    #68d391;
	--green-500:    #48bb78;
	--green-600:    #38a169;
	--green-700:    #2f855a;
	--green-800:    #276749;
	--green-900:    #22543d;
	--indigo-100:   #ebf4ff;
	--indigo-200:   #c3dafe;
	--indigo-300:   #a3bffa;
	--indigo-400:   #7f9cf5;
	--indigo-500:   #667eea;
	--indigo-600:   #5a67d8;
	--indigo-700:   #4c51bf;
	--indigo-800:   #434190;
	--indigo-900:   #3c366b;
	--orange-100:   #fffaf0;
	--orange-200:   #feebc8;
	--orange-300:   #fbd38d;
	--orange-400:   #f6ad55;
	--orange-500:   #ed8936;
	--orange-600:   #dd6b20;
	--orange-700:   #c05621;
	--orange-800:   #9c4221;
	--orange-900:   #7b341e;
	--pink-100:     #fff5f7;
	--pink-200:     #fed7e2;
	--pink-300:     #fbb6ce;
	--pink-400:     #f687b3;
	--pink-500:     #ed64a6;
	--pink-600:     #d53f8c;
	--pink-700:     #b83280;
	--pink-800:     #97266d;
	--pink-900:     #702459;
	--purple-100:   #faf5ff;
	--purple-200:   #e9d8fd;
	--purple-300:   #d6bcfa;
	--purple-400:   #b794f4;
	--purple-500:   #9f7aea;
	--purple-600:   #805ad5;
	--purple-700:   #6b46c1;
	--purple-800:   #553c9a;
	--purple-900:   #44337a;
	--red-100:      #fff5f5;
	--red-200:      #fed7d7;
	--red-300:      #feb2b2;
	--red-400:      #fc8181;
	--red-500:      #f56565;
	--red-600:      #e53e3e;
	--red-700:      #c53030;
	--red-800:      #9b2c2c;
	--red-900:      #742a2a;
	--teal-100:     #e6fffa;
	--teal-200:     #b2f5ea;
	--teal-300:     #81e6d9;
	--teal-400:     #4fd1c5;
	--teal-500:     #38b2ac;
	--teal-600:     #319795;
	--teal-700:     #2c7a7b;
	--teal-800:     #285e61;
	--teal-900:     #234e52;
	--white:        #ffffff;
	--yellow-100:   #fffff0;
	--yellow-200:   #fefcbf;
	--yellow-300:   #faf089;
	--yellow-400:   #f6e05e;
	--yellow-500:   #ecc94b;
	--yellow-600:   #d69e2e;
	--yellow-700:   #b7791f;
	--yellow-800:   #975a16;
	--yellow-900:   #744210;

	/* https://material.io/design/color/#tools-for-picking-colors */
	--md-blue-a100: #82b1ff;
	--md-blue-a200: #448aff;
	--md-blue-a400: #2979ff;
	--md-blue-a700: #2962ff;
	--md-gray-50:   #fafafa;
	--md-gray-100:  #f5f5f5;
	--md-gray-200:  #eeeeee;
	--md-gray-300:  #e0e0e0;
	--md-gray-400:  #bdbdbd;
	--md-gray-500:  #9e9e9e;
	--md-gray-600:  #757575;
	--md-gray-700:  #616161;
	--md-gray-800:  #424242;
	--md-gray-900:  #212121;
}

.pb-2\/1 {
	padding-bottom: 200%;
}
.pb-16\/9 {
	padding-bottom: 177.7778%;
}
.pb-16\/10 {
	padding-bottom: 160%;
}
.pb-3\/2 {
	padding-bottom: 150%;
}
.pb-4\/3 {
	padding-bottom: 133.3333%;
}
.pb-5\/4 {
	padding-bottom: 125%;
}
.pb-1\/1 {
	padding-bottom: 100%;
}
.pb-4\/5 {
	padding-bottom: 80%;
}
.pb-3\/4 {
	padding-bottom: 75%;
}
.pb-2\/3 {
	padding-bottom: 66.6667%;
}
.pb-10\/16 {
	padding-bottom: 62.5%;
}
.pb-9\/16 {
	padding-bottom: 56.25%;
}
.pb-1\/2 {
	padding-bottom: 50%;
}

.codex-editor[data-feature-read-only] ul > li:not([data-feature-task-item])::before {
	margin-right: 0.5em;
	flex-shrink: 0;
	display: inline-flex;
	content: "•";
	width: calc(12.7 / 18 * 1em);
	color: var(--md-blue-a400);
}

.codex-editor[data-feature-read-only] ol,
.codex-editor[data-feature-read-only] ul {
	counter-reset: number;
}
.codex-editor[data-feature-read-only] ol > li::before {
	margin-right: 0.5em;
	flex-shrink: 0;
	display: inline-flex;
	counter-increment: number;
	content: counter(number) ". ";
	font-feature-settings: "tnum";
	color: var(--md-blue-a400);
}

.line-through > .font-mono {
	vertical-align: 1px;
}

.emoji {
	vertical-align: -10%;
	font-size: 120%;
	line-height: 1;
}
.emojis-1 {
	font-size: 240%; /* 300% */
}
.emojis-2 {
	font-size: 200%; /* 250% */
}
.emojis-3 {
	font-size: 160%; /* 200 % */
}

.-tracking-px {
	letter-spacing: -0.0125em;
}
.tracking-px {
	letter-spacing: 0.0125em;
}

.leading-base {
	line-height: 1.15;
}

.text-md-blue-a200 {
	color: var(--md-blue-a200);
}
.text-md-blue-a400 {
	color: var(--md-blue-a400);
}

.text-red-100 {
	color: var(--red-100);
}
.text-red-600 {
	color: var(--red-600);
}
.bg-red-100 {
	background: var(--red-100);
}
.bg-red-600 {
	background: var(--red-600);
}

/* .bg-gray-50 { */
/* 	background: #fbfdfe; */
/* } */
/* .bg-md-gray-50 { */
/* 	background: #fafafa; */
/* } */

/* .rounded-lg-xl { */
/* 	border-radius: 0.75rem; */
/* } */
/* .rounded-xl { */
/* 	border-radius: 1rem; */
/* } */
/* .rounded-2xl { */
/* 	border-radius: 2rem; */
/* } */

.shadow-hero-sm {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 1px 2px 0 rgba(0, 0, 0, 0.05)
}
.shadow-hero {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)
}
.shadow-hero-md {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)
}
.shadow-hero-lg {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)
}
.shadow-hero-xl {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)
}
.shadow-hero-2xl {
	box-shadow:
		0 0 0 1px rgba(0, 0, 0, 0.05),
		0 25px 50px -12px rgba(0, 0, 0, 0.25)
}

